--- a/style.css
+++ b/style.css
@@ -2,14 +2,24 @@
     width: 600px;
     background-color: black;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 #container > div{
+width: 100px;
 height: 100px;
 background-color: aquamarine;
+transition: all .2s linear;
 }
 #container > div:nth-child(2){
-    background-color: deeppink;
+background-color: deeppink;
+height: 75px;
+}
+#container > div:nth-child(3){
+background-color: yellow;
+height: 50px;
 }
 #container > div:hover{
-    background-color: blueviolet;
+background-color: blueviolet;
 }
