--- a/style.css
+++ b/style.css
@@ -21,5 +21,5 @@ background-color: yellow;
 height: 50px;
 }
 #container > div:hover{
-background-color: blueviolet;
+background-color: rgb(102, 28, 172);
 }
